close button fix and visibility testing

--- a/navbar.css
+++ b/navbar.css
@@ -39,17 +39,19 @@
   }
   
   .navbar .icon {
-    display: none;
+    visibility: hidden;
   }
   
   @media screen and (max-width: 700px) {
     .navbar a {
       display: none;
+      transition: opacity 0.3s ease-in-out;
     }
 
     .navbar a.icon {
       float: right;
       display: block;
+      visibility: visible;
     }
   }
   
@@ -110,7 +112,7 @@
     color: darkcyan;
   }
   
-  .overlay .closebtn {
+  .overlay .closeNav {
     position: absolute;
     top: 20px;
     right: 45px;
@@ -126,7 +128,7 @@
       font-size: 30px
     }
     
-    .overlay .closebtn {
+    .overlay .closeNav {
     font-size: 40px;
     top: 15px;
     right: 35px;
